# MaaBo

./: README.md  components.d.ts  index.html  package-lock.json  package.json
.github/workflows/: release.yaml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: consts.rs  errors.rs  lib.rs  logger.rs  main.rs  status.rs  tray.rs  version.rs
src-tauri/src/events/: config.rs  consts.rs  init.rs  mod.rs  payload.rs  run.rs  tools.rs  update.rs  version.rs
src-tauri/src/maa_cli/: consts.rs  init.rs  mod.rs  run.rs  utils.rs
src-tauri/src/migration/: mod.rs  release_0_2_1.rs
src-tauri/src/utils/: dir.rs  mod.rs
src/apis/: FightStages.ts  ItemIndex.ts  MaaCLIConfig.ts  Path.ts  Run.ts  Tools.ts  Update.ts  UserConfig.ts  Version.ts
src/assets/: base.scss  main.scss
src/components/: AboutMaaBo.vue  MaaCliConfig.vue  MaaCopilot.vue  MaaCoreConfig.vue  MaaOneKey.vue  MaaTools.vue
src/components/OneKey/: AwardSetting.vue  FightSetting.vue  ReclamationAlgorithmSetting.vue  ReclamationSetting.vue  RoguelikeSetting.vue  StartUpSetting.vue  TaskInfo.vue  TaskList.vue
src/components/layout/: NaviLayout.vue
src/components/tools/: DepotTool.vue  OperBoxTool.vue  RecruitTool.vue  RecruitmentRecognition.vue
src/router/: index.ts
src/stores/: MaaBoConfig.ts  MaaBoRT.ts  MaaCLIConfig.ts  MaaCoreConfig.ts  PathInfo.ts  ToolsConfig.ts  UserConfig.ts  rt.ts
src/stores/tasks/: Award.ts  Fight.ts  Infrast.ts  (+7 more)
src/views/: CopilotView.vue  LoadingView.vue  OneKeyView.vue  SettingsView.vue  ToolsView.vue
(+15 files in other folders)
