[package]
name = "MaaBo"
# 0.0.0 means you are currently in a development environment, which will not detect updates
version = "0.0.0"
description = "MaaBo"
authors = ["vclass"]
license = "AGPL-3.0"
repository = "https://github.com/BoredTape/MaaBo"
default-run = "MaaBo"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [ "protocol-asset", "fs-all", "path-all",
    "shell-open",
    "dialog-all",
    "clipboard-all",
    "notification-all",
    "system-tray",
    "window-start-dragging",
    "notification",
    "windows7-compat",
    "icon-ico",
    "icon-png",
] }
directories = "5.0.1"
tempfile = "3.6.0"
tar = "0.4.41"
flate2 = "1.0.31"
zip-extract = "0.1.3"
reqwest = { version = "0.11.18", features = ["stream", "blocking", "json"] }
futures-util = "0.3.30"
walkdir = "2.5.0"
toml = "0.8.19"
os_pipe = "1.1.5"
thiserror = "1.0.63"
semver = "1.0.23"
log = "0.4.22"
log4rs = "1.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
